--- a/camp/src/main/webapp/resources/css/signUp.css
+++ b/camp/src/main/webapp/resources/css/signUp.css
@@ -1,9 +1,9 @@
-
 * {
     box-sizing: border-box;
 }
 
 body {
+    width: auto;
     height: auto;
     margin: 0;
    /*  margin-top: 120px */
@@ -12,13 +12,11 @@ body {
 }
 
 main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 950px;
-    height: 1000px;
+    width: auto;
+    height: 1135px;
     margin: auto;
-    margin-top: 50px;
+    background-image: url("../images/signUpBg3.jpg");
+    background-size: 100% 1140px;
 }
 
 
@@ -180,14 +178,98 @@ a:hover {
 }
 
 
-
-
-
 /* -----------------content------------------- */
+.error{
+    color: red;
+}
+.confirm{
+    color: green;
+}
+.form-control.is-valid {
+    border-color: #198754;
+    padding-right: calc(1.5em + 0.75rem);
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23198754' d='M2.3 6.73.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-position: right calc(0.375em + 0.1875rem) center;
+    background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+}
+.form-control.is-valid:focus {
+    border-color: #198754;
+    box-shadow: 0 0 0 0.25rem rgba(25, 135, 84, 0.25);
+}
+.form-control.is-invalid {
+    border-color: #dc3545;
+    padding-right: calc(1.5em + 0.75rem);
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23dc3545'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-position: right calc(0.375em + 0.1875rem) center;
+    background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+  }
+  .was-validated .form-control:invalid:focus, .form-control.is-invalid:focus {
+    border-color: #dc3545;
+    box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25);
+  }
+h1{
+    margin-top: 0;
+    margin-bottom: 30px;
+    color: #ffffff;
+}
+.signUpAll{
+    width: 100%;
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+}
+.signUpLeft{
+    /* z-index: 10000; */
+    width: 650px;
+    height: 1130px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url("../images/signUpBg3.jpg");
+    background-size: 100% 1130px;
+    padding: 0 !important;
+    /* background-color: rgb(255 255 255 / 16%) !important;  */
+    /* box-shadow: 2px 7px 15px 8px rgba(0,0,0,0.3); */
+    /* backdrop-filter: blur(5px) !important; */
+    /* background-color: #000000 !important; */
+    /* background-size: 650px 1130px; */
+   
+}
+/* .backdrop {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10000;
+    width: 650px;
+    height: 100%;
+    backdrop-filter: blur(5px);
+    background-color: rgb(255 255 255 / 16%);
+    box-shadow: 2px 7px 15px 8px rgba(0,0,0,0.3); 
+  } 
+  */
 
+.signUp-input-area {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+#signUp-btn {
+    width: 550px;
+    margin: 20px 0 0;
+    justify-content: center;
+}
+.signUp-message {
+    margin-top: 0;
+    margin-bottom: 30px;
+}
+.signName{
+    font-size: 20px;
+    font-weight: bold;
+}
 .msg {
-    font-size: 17px;
-    
+    font-size: 20px;
 }
 
 .idPw-input-area {
@@ -201,21 +283,21 @@ a:hover {
   }
 
   .bg-light {
-    width: 70%;
-    margin-top: 20px;
+    width: 650px;
+    margin-top: 0;
     --bs-bg-opacity: 1;
-    background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important;
-    padding-top: 3rem !important;
-    padding-bottom: 3rem !important;
-    padding-right: 1.5rem !important;
-    padding-left: 1.5rem !important;
+    background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity));
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+    padding-right: 35px;
+    padding-left: 35px;
    border: 1px solid rgb(202, 202, 202);
     box-shadow: 5px 5px#c9c8c8;
     border-radius: var(--bs-border-radius-xl) !important;
   }
   .px-md-5 {
-    padding-right: 3rem !important;
-    padding-left: 3rem !important;
+    padding-right: 3rem;
+    padding-left: 3rem;
   }
   .mb-5 {
     margin-bottom: 2rem !important;
@@ -262,13 +344,13 @@ a:hover {
   }
   .col-xl-6 {
     flex: 0 0 auto;
-    width: 70%;
+    width: 100%;
   }
   .form-floating {
     position: relative;
   }
   .mb-3 {
-    margin-bottom: 1rem !important;
+    margin-bottom: 0.5rem !important;
   }
 
 
@@ -297,7 +379,7 @@ a:hover {
     left: 0;
     width: 100%;
     height: 100%;
-    padding: 1rem 0.75rem;
+    padding: 1rem 0.1rem;
     overflow: hidden;
     text-align: start;
     text-overflow: ellipsis;
@@ -365,9 +447,9 @@ a:hover {
 
   .form-control {
     display: block;
-    width: 100%;
-    padding: 0.375rem 0.75rem;
-    font-size: 1.5rem;
+    width: 70%;
+    padding: 0.375rem 0.5rem;
+    font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
     color: #212529;
@@ -573,6 +655,19 @@ a:hover {
     background-color: var(--bs-btn-hover-bg);
     border-color: var(--bs-btn-hover-border-color);
   }
+.btn2 {
+    width: 140px;
+    height: 40px;
+    margin-left: 15px;
+    font-size: 15px;
+    transition: none;
+}
+.btn2:hover {
+    color: var(--bs-btn-hover-color);
+    background-color: var(--bs-btn-hover-bg);
+    border-color: var(--bs-btn-hover-border-color);
+  }
+  
 
 
   .btn-primary {
@@ -697,6 +792,18 @@ hr {
   border-top: 1px solid;
   opacity: 0.25;
 }
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
