--- a/camp/src/main/webapp/resources/css/mypage.css
+++ b/camp/src/main/webapp/resources/css/mypage.css
@@ -12,7 +12,7 @@
 /* 왼쪽 사이드 메뉴 */
 .left-side{
     position: sticky;
-    top: 120px;
+    top: 90px;
     width: 12%;
     
     /* border-right : 2px solid gray; */
@@ -67,7 +67,7 @@
 }
 
 .myPage-title{
-    margin : 0 0 20px 0;
+    margin : 20px 0 20px 0;
     font-size: 30px;
 }
 
