--- a/camp/src/main/webapp/resources/css/signUpCheck.css
+++ b/camp/src/main/webapp/resources/css/signUpCheck.css
@@ -1,38 +1,46 @@
-/* body{
-    background-image: url('../images/findIdPw6.jpg'); 
-    background-size: 100% 1800px;
-} */
+body{
+    background-image: url('../images/findBg2.jpg'); 
+    background-size: 100% 100%;
+}
 .signUpCheckAll{
     margin-top: 150px;
     margin-bottom: 50px;
     /* background-color: #ffff; */
-    opacity: 0.8;
+    /* background-image: url("../images/signUpCheckBg1.jpg");
+    background-size: 100% 100%; */
+    /* opacity: 0.9; */
 }
 .signUpCheckForm{
     width: 900px;
-    height: auto;
+    height: 2100px;
     display: flex;
     margin-left: auto;
     margin-right: auto;
     flex-direction: column;
+    justify-content: center;
 }
 .contentCheck{
     width: 1000px;
-    height: 2000px;
+    height: 1950px;
     border: 1px solid #212529;
+    border-radius: 2.5rem;
     display: flex;
     flex-direction: column;
     /* justify-content: center; */
     align-items: center;
+    box-shadow: 5px 5px 10px #022b02;
+    background-color: rgba(238, 238, 238, 0.8);
 }
 .signUpCheckBox{
     display: flex;
     /* align-items: start; */
     justify-content: center;
     width: 27px;
+    accent-color: #022b02;
 }
 .allsignUpCheckBox{
     width: 27px;
+    accent-color: #022b02;
 }
 .subject{
     display: flex;
@@ -51,16 +59,18 @@
     overflow: auto;
     font-size: 20px;
     background-color: #ffff;
+    padding: 10px;
     /* margin: auto; */
 }
 
 .agreement{
+    width: 840px;
     display: flex;
+    justify-content: end;
     margin-top: 15px;
     margin-bottom: 30px;
     font-size: 23px;
     font-weight: bold;
-    justify-content: end;
 }
 .signUpMoveBtn{
     margin-top: 50px;
@@ -81,7 +91,7 @@
     font-size: 25px;
     border: 1px solid rgb(71, 71, 71);
     border-radius: 0.38rem;
-    background-color: #5b5b5c;
+    background-color: #494949;
     color: #ffff;
     cursor: pointer;
     margin-top: 20px;
@@ -89,7 +99,7 @@
     margin-right: auto;
 }
 #signUpCheckBtn:hover{
-    background-color: #212529;
+    background-color: #070707;
     border-color: black;
-    color: #23f135;
+    color: #0b9d18;
 }
