--- a/camp/src/main/webapp/resources/css/mypage.css
+++ b/camp/src/main/webapp/resources/css/mypage.css
@@ -50,6 +50,15 @@ section.myPage-main > .reply-list-area > #reply-list > li {
   height: 20px;
 }
 
+.reserveCheckBtn{
+  border-radius: 5px;
+  height: 30px;
+  cursor: pointer;
+}
+
+
+
+
 
 .secessionContent{
   border: 1px solid black;
