--- a/camp/src/main/webapp/resources/css/login.css
+++ b/camp/src/main/webapp/resources/css/login.css
@@ -407,7 +407,7 @@ cursor: pointer;
     border: 1px solid transparent;
     transform-origin: 0 0;
     transition: opacity 0.1s ease-in-out, transform 0.1s ease-in-out;
-    font-size: 20px;
+    /* font-size: 20px; */
   }
   @media (prefers-reduced-motion: reduce) {
     .form-floating > label {
@@ -448,7 +448,10 @@ cursor: pointer;
     opacity: 0.65;
     transform: scale(0.85) translateY(-0.5rem) translateX(0.15rem);
   }
-  .form-floating > .form-control:focus ~ label {
+  .form-floating > .form-control:focus ~ label,
+  .form-floating > .form-control:not(:placeholder-shown) ~ label,
+  .form-floating > .form-control-plaintext ~ label,
+  .form-floating > .form-select ~ label {
     opacity: 0.65;
     transform: scale(0.85) translateY(-0.5rem) translateX(0.15rem);
   }
@@ -528,14 +531,6 @@ cursor: pointer;
     border-radius: 0;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   }
-  @media (prefers-reduced-motion: reduce) {
-    .form-control::file-selector-button {
-      transition: none;
-    }
-  }
-  .form-control:hover:not(:disabled):not([readonly])::file-selector-button {
-    background-color: #dde0e3;
-  }
   
   .form-control-plaintext {
     display: block;
@@ -562,24 +557,12 @@ cursor: pointer;
     font-size: 0.875rem;
     border-radius: 0.25rem;
   }
-  .form-control-sm::file-selector-button {
-    padding: 0.25rem 0.5rem;
-    margin: -0.25rem -0.5rem;
-    -webkit-margin-end: 0.5rem;
-            margin-inline-end: 0.5rem;
-  }
   
   .form-control-lg {
     min-height: calc(1.5em + 1rem + 2px);
     padding: 0.5rem 1rem;
     font-size: 1.25rem;
     border-radius: 0.5rem;
-  }
-  .form-control-lg::file-selector-button {
-    padding: 0.5rem 1rem;
-    margin: -0.5rem -1rem;
-    -webkit-margin-end: 1rem;
-            margin-inline-end: 1rem;
   }
   
   textarea.form-control {
