--- a/camp/src/main/webapp/resources/css/mypage.css
+++ b/camp/src/main/webapp/resources/css/mypage.css
@@ -163,7 +163,9 @@ section.myPage-main > .reply-list-area > #reply-list > li {
     align-items: center;
     /* border-bottom : 2px solid #ddd; */
 }
-
+#form-profileImage{
+  width: 400px;
+}
 #form-profileImage .myPage-row {
     height: 200px;
 }
@@ -221,6 +223,7 @@ form[name="myPage-form"]{
   margin-top: 50px;
   width: 80%;
   display: flex;
+  justify-content: center;
   border: 4px solid #e9480885;
   box-shadow: 5px 5px 10px 5px #ed946fb5;
   border-radius: 2rem;
