--- a/camp/src/main/webapp/resources/css/boardList-style.css
+++ b/camp/src/main/webapp/resources/css/boardList-style.css
@@ -144,15 +144,21 @@ thead tr:nth-child(1) {
     width: 100%;
     height: 100%;
     display: block;
+    border-radius: 5px;
     /* letter-spacing : -2px; */
+}
+
+.pagination a:hover {
+    background-color: #eb5d1e;
 }
 
 /* 현재 페이지 번호 */
 .pagination .current{
-    background-color: #495057;
-    border-radius: 50%;
+    background-color: #eb5d1e;
     color: white;
     font-weight: bold;
+    width: 23px;
+    border-radius: 5px;
 }
 
 
